Update pytest.yml / dependencies

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -16,6 +16,10 @@ jobs:
       with:
         python-version: '3.12'
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+
     - name: Install apyxl
       run: |
         python setup.py install
