--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Run autopep8 on Python files
       run: |
-        autopep8 --in-place --aggressive --aggressive --max-line-legth 100 **/*.py
+        autopep8 --in-place --aggressive --aggressive --max-line-length 100 **/*.py
 
     - name: Check for uncommitted changes
       run: |
